@@ -230,6 +230,7 @@ Version 1.5
  - Add Qubino ZMNHYD1 Smart Plug 16A (Nechry)
  - Clear Buffer when reading a new packet - Issue #1596 (Justin)
  - Add additional mapping for MCO Home MHS-314 switch
+ - Add Zipato PSR03-1B.EU Keyfob 5 Remote (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
